--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="norse-banner">
         <div>
-            <img src="/images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
+            <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
             <nav class="norse-nav">
                 <a class="norse-nav" href="#">About US  <button type="menu" class="down-arrow">&#8744;</button></a>
                 <a class="norse-nav" href="#">Our Services<button type="menu" class="down-arrow">&#8744;</button></a>
@@ -22,7 +22,7 @@
         <section class="banner">
             <div>
         <h1>Medway Norse</h1>
-        <img class="medway-logo" src="/images/Medway-Rev.png" alt="medway norse logo">
+        <img class="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
             </div>
         </section>
         <div>
