--- a/faq.html
+++ b/faq.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medway Norse Pest Control - Home</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="norse-banner">
         <div>
-            <img src="/images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
+            <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
             <nav class="norse-nav">
                 <a class="norse-nav" href="#">About US  <button type="menu" class="down-arrow">&#8744;</button></a>
                 <a class="norse-nav" href="#">Our Services<button type="menu" class="down-arrow">&#8744;</button></a>
@@ -22,7 +22,7 @@
         <section class="banner">
             <div>
         <h1>Medway Norse</h1>
-        <img class="medway-logo" src="/images/Medway-Rev.png" alt="medway norse logo">
+        <img class="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
             </div>
         </section>
         <div>
