--- a/services.html
+++ b/services.html
@@ -4,36 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medway Norse Pest Control - Home</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="norse-banner">
         <div>
-            <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
+            <img src="/images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
             <nav class="norse-nav">
-                <a class="norse-nav" href="#">About US  <button type="menu" class="down-arrow">&#8744;</button></a>
-                <a class="norse-nav" href="#">Our Services<button type="menu" class="down-arrow">&#8744;</button></a>
+                <a class="norse-nav" href="#">About US  <button type="menu" class="fa">&#xf078;</button></a>
+                <a class="norse-nav" href="#">Our Services<button type="menu" class="fa">&#xf078;</button></a>
                 <a class="norse-nav" href="#">Our Partnerships</a>
                 <a class="norse-nav" href="#">Careers</a>
                 <a class="norse-nav" href="#">News</a>
+                <button class="contact-btn">
+                        Contact Us
+                </button>
             </nav>
         </div>
     </header>
         <section class="banner">
             <div>
-        <h1>Medway Norse</h1>
-        <img class="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
+        <h1 class="medway-header">Medway Norse</h1>
+        <img class="medway-logo" src="/images/Medway-Rev.png" alt="medway norse logo">
             </div>
         </section>
-        <div>
+        <span class="pest-nav">
         <nav class="medway-nav">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="contact-us.html">Contact Us</a>
-            <a href="faq.html">FAQ</a>
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="contact-us.html">Contact Us</a>
+            <a class="nav-link" href="faq.html">FAQ</a>
         </nav>
-        </div>
+    </span>
     <div class="container">
         <h2>Our Services</h2>
         <p>We offer a range of pest control services to suit your needs.</p>
