--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medway Norse Pest Control - Home</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="norse-banner">
         <div>
-            <img src="/images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
+            <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
             <nav class="norse-nav">
                 <a class="norse-nav" href="#">About US  <button type="menu" class="fa">&#xf078;</button></a>
                 <a class="norse-nav" href="#">Our Services<button type="menu" class="fa">&#xf078;</button></a>
@@ -26,7 +26,7 @@
         <section class="banner">
             <div>
         <h1 class="medway-header">Medway Norse</h1>
-        <img class="medway-logo" src="/images/Medway-Rev.png" alt="medway norse logo">
+        <img class="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
             </div>
         </section>
         <span class="pest-nav">
