--- a/contact-us.html
+++ b/contact-us.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header class="norse-banner">
         <div>
             <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
             <nav class="norse-nav">
-                <a class="norse-nav" href="#">About US  <button type="menu" class="fa">&#xf078;</button></a>
-                <a class="norse-nav" href="#">Our Services<button type="menu" class="fa">&#xf078;</button></a>
-                <a class="norse-nav" href="#">Our Partnerships</a>
-                <a class="norse-nav" href="#">Careers</a>
-                <a class="norse-nav" href="#">News</a>
-                <button class="contact-btn">
+                <a class="norse-nav" href="https://norsegroup.co.uk/about-us/">About US  <button type="menu" class="fa">&#xf078;</button></a>
+                <a class="norse-nav" href="https://norsegroup.co.uk/services/">Our Services<button type="menu" class="fa">&#xf078;</button></a>
+                <a class="norse-nav" href="https://norsegroup.co.uk/partnerships/">Our Partnerships</a>
+                <a class="norse-nav" href="https://www.careers.norsegroup.co.uk/">Careers</a>
+                <a class="norse-nav" href="https://norsegroup.co.uk/news/">News</a>
+                <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="contact-btn">
                         Contact Us
                 </button>
             </nav>
