--- a/faq.html
+++ b/faq.html
@@ -16,12 +16,12 @@
         <div>
             <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
             <nav class="norse-nav">
-                <a class="norse-nav" href="#">About US  <button type="menu" class="fa">&#xf078;</button></a>
-                <a class="norse-nav" href="#">Our Services<button type="menu" class="fa">&#xf078;</button></a>
-                <a class="norse-nav" href="#">Our Partnerships</a>
-                <a class="norse-nav" href="#">Careers</a>
-                <a class="norse-nav" href="#">News</a>
-                <button class="contact-btn">
+                <a class="norse-nav" href="https://norsegroup.co.uk/about-us/">About US  <button type="menu" class="fa">&#xf078;</button></a>
+                <a class="norse-nav" href="https://norsegroup.co.uk/services/">Our Services<button type="menu" class="fa">&#xf078;</button></a>
+                <a class="norse-nav" href="https://norsegroup.co.uk/partnerships/">Our Partnerships</a>
+                <a class="norse-nav" href="https://www.careers.norsegroup.co.uk/">Careers</a>
+                <a class="norse-nav" href="https://norsegroup.co.uk/news/">News</a>
+                <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="contact-btn">
                         Contact Us
                 </button>
             </nav>
