--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medway Norse Pest Control - Home</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" media="screen and (min-width: 992px)" href="css/styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/ssstyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,17 +15,19 @@
 <body>
     <header class="norse-banner">
         <div>
+            <a href="https://norsegroup.co.uk/">
             <img src="images/Norse_Group_logo.png" alt="norse group logo" class="norse-logo">
+            </a>
             <nav class="norse-nav">
                 <a class="norse-nav" href="https://norsegroup.co.uk/about-us/">About US  <button type="menu" class="fa">&#xf078;</button></a>
                 <a class="norse-nav" href="https://norsegroup.co.uk/services/">Our Services<button type="menu" class="fa">&#xf078;</button></a>
                 <a class="norse-nav" href="https://norsegroup.co.uk/partnerships/">Our Partnerships</a>
                 <a class="norse-nav" href="https://www.careers.norsegroup.co.uk/">Careers</a>
                 <a class="norse-nav" href="https://norsegroup.co.uk/news/">News</a>
-                <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="contact-btn">
-                        Contact Us
-                </button>
             </nav>
+            <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="contact-btn">
+                Contact Us
+        </button>
         </div>
     </header>
         <section class="banner">
@@ -50,6 +53,32 @@
     <footer>
         <p>&copy; 2024 Medway Norse Pest Control</p>
     </footer>
+<!--       cookies     --> 
+<div id="consentBox">
+    <img src=
+"images/Norse_Group_logo.png"
+         alt="Logo">
+    <div id="consentContent">
+        <header id="consentHeader">
+              Cookies: The choice is yours
+          </header>
+        <p>
+          We use cookies to make our site work well
+          for you and so we can continually improve it.
+          <br>The cookies that are necessary to 
+          keep the site functioning are always on
+        </p>
+        <div class="buttons">
+            <button class="consentButton">
+                  Accept Cookies
+              </button>
+            <button class="rejectButton">
+                  Reject
+              </button>
+        </div>
+    </div>
+</div>
+<script src="script.js"></script>
 
 </body>
 </html>
