--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About</a>
             <a class="nav-link" href="services.html">Services</a>
-            <a class="nav-link" href="contact-us.html">Contact Us</a>
+            <a class="nav-link" href="contact-us.php">Contact Us</a>
             <a class="nav-link" href="faq.html">FAQ</a>
         </nav>
     </span>
