--- a/services.html
+++ b/services.html
@@ -52,5 +52,31 @@
     <footer>
         <p>&copy; 2024 Medway Norse Pest Control</p>
     </footer>
+    <!--       cookies     --> 
+<div id="consentBox">
+    <img src=
+"images/Norse_Group_logo.png"
+         alt="Logo">
+    <div id="consentContent">
+        <header id="consentHeader">
+              Cookies: The choice is yours
+          </header>
+        <p>
+          We use cookies to make our site work well
+          for you and so we can continually improve it.
+          <br>The cookies that are necessary to 
+          keep the site functioning are always on
+        </p>
+        <div class="buttons">
+            <button class="consentButton">
+                  Accept Cookies
+              </button>
+            <button class="rejectButton">
+                  Reject
+              </button>
+        </div>
+    </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
