final update for the week

--- a/thank-you.html
+++ b/thank-you.html
@@ -25,11 +25,21 @@
             <img src="images/Norse_Group_logo.png" alt="norse group logo" class="col offset-1" id="norse-logo">
             </a>
             <nav id="norse-nav">
-                <a class="col offset-3 cols-12" id="norse-nav" href="https://norsegroup.co.uk/about-us/">About US  <button type="menu" class="fa">&#xf078;</button></a>
-                <a class="col-2" id="norse-nav" href="https://norsegroup.co.uk/services/">Our Services<button type="menu" class="fa">&#xf078;</button></a>
-                <a class="col-2" id="norse-nav" href="https://norsegroup.co.uk/partnerships/">Our Partnerships</a>
-                <a class="col-2" id="norse-nav" href="https://www.careers.norsegroup.co.uk/">Careers</a>
-                <a class="col-2" id="norse-nav" href="https://norsegroup.co.uk/news/">News</a>
+                <a class="nav-item col-1 offset-2" href="https://norsegroup.co.uk/about-us/">
+                    About Us <span class="fa">&#xf078;</span>
+                </a>
+                <a class="nav-item col-1" href="https://norsegroup.co.uk/services/">
+                    Our Services <span class="fa">&#xf078;</span>
+                </a>
+                <a class="nav-item col-1" href="https://norsegroup.co.uk/partnerships/">
+                    Our Partnerships
+                </a>
+                <a class="nav-item col-1"  href="https://www.careers.norsegroup.co.uk/">
+                    Careers
+                </a>
+                <a class="nav-item col-1"  href="https://norsegroup.co.uk/news/">
+                    News
+                </a>
             </nav>
         </div>
     </header>
