--- a/thank-you.html
+++ b/thank-you.html
@@ -16,37 +16,27 @@
 <body>
     <header id="norse-banner">
         <div class="container">
-            <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="cols offset-3 colxl offset-9 " id="contact-btn">
+            <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="cols offset-3 colxl offset-10" id="contact-btn">
                 Contact Us
-        </button>
-        </div>
-        <div class="container">
+            </button>
             <a href="https://norsegroup.co.uk/">
-            <img src="images/Norse_Group_logo.png" alt="norse group logo" class="col offset-1" id="norse-logo">
+                <img src="images/Norse_Group_logo.png" alt="norse group logo" id="norse-logo">
             </a>
+            <div class="hamburger" onclick="toggleNav()">&#9776;</div> <!-- Hamburger Icon -->
             <nav id="norse-nav">
-                <a class="nav-item col-1 offset-2" href="https://norsegroup.co.uk/about-us/">
-                    About Us <span class="fa">&#xf078;</span>
-                </a>
-                <a class="nav-item col-1" href="https://norsegroup.co.uk/services/">
-                    Our Services <span class="fa">&#xf078;</span>
-                </a>
-                <a class="nav-item col-1" href="https://norsegroup.co.uk/partnerships/">
-                    Our Partnerships
-                </a>
-                <a class="nav-item col-1"  href="https://www.careers.norsegroup.co.uk/">
-                    Careers
-                </a>
-                <a class="nav-item col-1"  href="https://norsegroup.co.uk/news/">
-                    News
-                </a>
+                <a class="nav-item" href="https://norsegroup.co.uk/about-us/">About Us<button type="menu" class="fa">&#xf078;</button></a>
+                <a class="nav-item" href="https://norsegroup.co.uk/services/">Our Services<button type="menu" class="fa">&#xf078;</button></a>
+                <a class="nav-item" href="https://norsegroup.co.uk/partnerships/">Our Partnerships</a>
+                <a class="nav-item" href="https://www.careers.norsegroup.co.uk/">Careers</a>
+                <a class="nav-item" href="https://norsegroup.co.uk/news/">News</a>
             </nav>
         </div>
     </header>
+    
         <section id="medway-banner">
             <div class="container">
         <h1 class="col" id="medway-header">Medway Norse</h1>
-        <img class="col offset-9" id="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
+        <img class="col offset-10" id="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
             </div>
         </section>
         <span id="pest-nav">
