--- a/index.html
+++ b/index.html
@@ -52,14 +52,26 @@
     </span>
     
     <div class="container main">
-        <h2>Welcome to Medway Norse Pest Control</h2>
+        <h2><b>Welcome to Medway Norse Pest Control</b></h2>
     </div>
     <div class="container main">
-        <p>Your pest control solution for a healthier home.<br><br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p style="font-size: 1.2em;">Medway Norse Pest Control: Your council approved pest control partner for pest free living and working, local expertise you can trust.</p><br><br>
+        <p style="font-size: 1.1em;"><b>Why Choose Medway Norse Pest Control?<br><br>
+            Your Trusted Local Pest Control Experts<br><br><br></b></p>
+<p>            <b>o	Council Approved:</b> We are fully vetted and approved by the Medway Council, ensuring the highest standards of service and safety.<br><br>
+            <b>o	Local Expertise:</b> Meet Your Medway Pest Control Experts: Medway Norse Pest Control is your home team advantage against unwanted pests.
+             Our team of technicians aren't just qualified professionals with over 60 years of combined experience and Level 2 certifications:
+              they're your Medway neighbours. This means they have an intimate understanding of the local pest pressures and bring a passion for protecting our community.
+               Each technician boasts a specialised area of expertise, ensuring we have the right solution for any pest problem.
+                With Medway Norse, you get effective, council-approved pest control from local experts who truly care.<br><br>
+           <b> o	Effective Solutions:</b> We use proven methods and industry-leading products to effectively eliminate pests and prevent future infestations,
+             including specialised services like bird proofing.<br><br>
+          <b> o	Customer Focused:</b> Your satisfaction is our priority, starting from the moment you contact us.
+             Our friendly and understanding admin team is here to answer your calls and emails with the utmost discretion and professionalism.
+              They'll guide you through the process, answer your questions without judgment, and help you schedule a service that fits your needs.
+               Don't be embarrassed to reach out – we understand that pest problems can be stressful, and we're here to help, no matter the situation.
+                We offer transparent pricing, clear communication, and reliable service.
+            </p>
         <p id="demo"></p>
     </div>
     <footer>
