--- a/services.html
+++ b/services.html
@@ -66,12 +66,12 @@
         <a href="pigeon.html" class="tile" style="background-image: url('images/Pigeon.jpg');">Bird Control (Pigeons)</a>
         <a href="beetles.html" class="tile" style="background-image: url('images/Beetlesv2.jpg');">Beetles</a>
         <a href="Ants.html" class="tile" style="background-image: url('images/Antsv2.jpg');">Ants</a>
-        <a href="cockroaches.html" class="tile" style="background-image: url('images/roaches.jpg');">Cockroaches</a>
-        <a href="squirrels.html" class="tile" style="background-image: url('images/Squirrels.jpg');">Squirrels</a>
+        <a href="cockroaches.html" class="tile" style="background-image: url('images/Roaches.jpg');">Cockroaches</a>
+        <a href="squirrels.html" class="tile" style="background-image: url('images/squirrels.jpg');">Squirrels</a>
         <a href="silverfish.html" class="tile" style="background-image: url('images/Silverfishv2.jpg');">Silverfish</a>
         <a href="moths.html" class="tile" style="background-image: url('images/Moths.jpg');">Moths</a>
         <a href="wasps.html" class="tile" style="background-image: url('images/Wasps.jpg');">Wasps</a>
-        <a href="other.html" class="tile" style="background-image: url('images/Pest.jpg');">Other</a>
+        <a href="other.html" class="tile" style="background-image: url('images/pest.jpg');">Other</a>
     </div>
       </div>
       <footer>
