added map tile & contact tile

--- a/index.html
+++ b/index.html
@@ -72,6 +72,32 @@
                Don't be embarrassed to reach out – we understand that pest problems can be stressful, and we're here to help, no matter the situation.
                 We offer transparent pricing, clear communication, and reliable service.
             </p>
+            <!-- contact tile-->
+            <div class="contact-tile">
+               <u> <a href="contact-us.html" class="contact-item" style="font-size: 1.5em; font-weight: 600;" >
+                     Contact Us Now!</a></u><br>
+                <a href="mailto:pestcontrol@ncsgrp.co.uk" class="contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
+                <a href="tel:01634283215" class="contact-item">📞 01634 283215</a><br>
+                <p>
+                    contact us now.....lorum ipsum delit
+                </p>
+            </div>
+            <!--map tile-->
+            <div class="map-tile">
+                <h4>How to find us</h4>
+                <iframe
+                    src=
+                    "https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1245.7888619351306!2d0.4984119504679396!3d51.35567519372614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNTHCsDIxJzE5LjEiTiAwwrAyOSc1MS4wIkU!5e0!3m2!1sen!2suk!4v1736335231811!5m2!1sen!2suk"
+                    width="100%"
+                    height="100%"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </body>
+
         <p id="demo"></p>
     </div>
     <footer>
