--- a/other.html
+++ b/other.html
@@ -80,8 +80,32 @@
              and specialised cleaning products to handle hazardous materials safely and effectively.<br>
            <b> •	Discreet and Efficient:</b> We understand the sensitive nature of these situations and work discreetly and efficiently to minimize disruption.<br>
            <b> •	Thorough and Compliant:</b> We adhere to all relevant health and safety regulations and ensure that waste is disposed of properly.<br>
-           <b> •	Combined with Pest Control:</b> As a leading pest control provider, we offer a seamless transition from pest elimination to property restoration.<br>
+           <b> •	Combined with Pest Control:</b> As a leading pest control provider, we offer a seamless transition from pest elimination to property restoration.<br><br>
              
+        </p>
+        <p style="font-weight: 500;">
+            <b>Protect Your Business with a Yearly Pest Control Contract</b><br>
+
+Safeguard Your Reputation and Bottom Line
+</p>
+<p>
+For businesses in Medway, a pest infestation can be more than just a nuisance – it can damage your reputation, disrupt operations, and impact your bottom line.
+ Medway Norse Pest Control offers comprehensive yearly pest control contracts designed to provide proactive protection for your commercial premises,
+  giving you peace of mind and allowing you to focus on what you do best.<br><br>
+<b>How It Works:</b>
+Our yearly contracts begin with a thorough inspection of your property to identify potential risks and develop a tailored pest control plan.
+ We then schedule regular visits throughout the year to monitor for activity, implement preventative measures,
+  and address any emerging issues before they escalate. Our expert technicians will work discreetly and efficiently,
+   minimising disruption to your business operations. <br><br>
+
+<b>Benefits of a Yearly Contract:</b><br>
+<b>•	Proactive Prevention:</b> Regular inspections and treatments stop infestations before they start.<br>
+<b>•	Cost-Effective:</b> A contract often saves you money compared to reactive, emergency treatments.<br>
+<b>•	Peace of Mind:</b> Knowing your business is protected year-round allows you to focus on your core operations.<br>
+<b>•	Compliance:</b> Ensure you meet industry regulations and health and safety standards.<br>
+<b>•	Priority Service:</b> Receive priority scheduling for any pest treatments needed outside of regular visits.<br><br></p>
+<p style="font-size: 1.1em;">
+<b>Protect your investment and your reputation. Contact Medway Norse Pest Control today to discuss a tailored yearly contract for your business.</b>
         </p>
 
         <p id="demo"></p>
