moved norse logo to footer

--- a/Rats.html
+++ b/Rats.html
@@ -78,12 +78,27 @@
                 DIY methods often fail to address the root of the problem and can even worsen the situation.</p>
         
     </div>
-    <footer>
-        <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
-        <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
-        <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
-        <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+    <div class="services-contact-tile">
+        <u> <a href="contact-us.html" class="services-contact-item" style="font-size: 1.5em; font-weight: 600;" >
+              Contact Us Now!</a></u><br>
+         <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
+         <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
+         <p>
+             Click Above to Book An Appointment Now!
+         </p>
+     </div>
+     <footer>
+        <div class="footer-center">
+            <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+            <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+            <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+            <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        </div>
+        <a href="https://norsegroup.co.uk/">
+        <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
+        </a>
     </footer>
+
     <!--       cookies     --> 
     <div id="consentBox">
         <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
