--- a/contact-us.html
+++ b/contact-us.html
@@ -57,7 +57,7 @@
 <!--     Contact Form    -->
     <div class="container" id="contact-form">
         <form action="https://formsubmit.co/tim.discipline@ncsgrp.co.uk" method="POST" autocomplete="on">
-            <input type="hidden" name="_cc" value="tdiscipline@gmail.co.uk">
+            <input type="hidden" name="_cc" value="tdiscipline@gmail.com">
       
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" placeholder=" Enter Your full name.." required>
@@ -117,11 +117,17 @@
     </form>
 </div>
 <footer>
-    <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
-    <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
-    <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
-    <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+    <div class="footer-center">
+        <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+        <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+        <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+        <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+    </div>
+    <a href="https://norsegroup.co.uk/">
+    <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
+    </a>
 </footer>
+
 <!--       cookies     --> 
 <div id="consentBox">
     <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
