--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Medway Norse Pest Control - Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico?">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -102,11 +102,17 @@
         <p id="demo"></p>
     </div>
     <footer>
-        <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
-        <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
-        <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
-        <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        <div class="footer-center">
+            <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+            <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+            <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+            <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        </div>
+        <a href="https://norsegroup.co.uk/">
+        <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
+        </a>
     </footer>
+
     <!--       cookies     --> 
     <div id="consentBox">
         <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
