--- a/services.html
+++ b/services.html
@@ -75,11 +75,17 @@
     </div>
       </div>
       <footer>
-        <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
-        <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
-        <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
-        <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        <div class="footer-center">
+            <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+            <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+            <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+            <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        </div>
+        <a href="https://norsegroup.co.uk/">
+        <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
+        </a>
     </footer>
+
     <!--       cookies     --> 
     <div id="consentBox">
         <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
