--- a/about.html
+++ b/about.html
@@ -54,7 +54,8 @@
         <h2>About Us</h2>
     </div>
     <div class="container main">
-        <p style="font-size: 1.1em; font-weight: 600;">Medway Norse Pest Control: Your council approved pest control partner for pest free living and working, local expertise you can trust..<br><br></p>
+        <p style="font-size: 1.1em; font-weight: 600;">Medway Norse Pest Control: Your council approved pest control partner for pest free living and working,
+             local expertise you can trust.<br><br></p>
             
             <p><b style="font-size: 1.1em;">Medway Norse Pest Control: Your Local Experts, Protecting Our Community</b><br>
             At Medway Norse Pest Control, we're more than just a pest control company - we're your neighbours.
@@ -85,14 +86,20 @@
             <b style="font-size: 1.1em;">Part of the Norse Group Family</b><br>
             Medway Norse Pest Control is a proud part of the Norse Group, one of the UK's largest and most respected facilities management companies. Norse Group provides a wide range of services to both the public and private sectors, including building maintenance, cleaning, catering, security, and, of course, pest control. Being part of this larger organisation gives us access to extensive resources, industry-leading training, and a network of expertise, allowing us to deliver the highest quality service to our customers in Medway.
             We believe in protecting our community, not just by eliminating pests but by doing so responsibly and with a focus on long-term solutions. When you choose Medway Norse Pest Control, you're choosing a team that cares about your well-being, your property, and the environment we all share.
-            </p>
+            </p><br><br>
     </div>
     <footer>
-        <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
-        <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
-        <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
-        <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        <div class="footer-center">
+            <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+            <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+            <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+            <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        </div>
+        <a href="https://norsegroup.co.uk/">
+        <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
+        </a>
     </footer>
+
     <!--       cookies     --> 
     <div id="consentBox">
         <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
