--- a/faq.html
+++ b/faq.html
@@ -14,33 +14,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header id="norse-banner">
-        <div class="container">
-            <button onclick="location.href='https://norsegroup.co.uk/contact-us/'" class="cols offset-3 colxl offset-10" id="contact-btn">
-                <span class="contact-text">Contact Us</span>
-                <span class="contact-icon fa fa-envelope"></span>
-            </button>
-            <a href="https://norsegroup.co.uk/">
-                <img src="images/Norse_Group_logo.png" alt="norse group logo" id="norse-logo">
-            </a>
-            <div class="hamburger" onclick="toggleNav()">&#9776;</div> <!-- Hamburger Icon -->
-            <nav id="norse-nav">
-                <a class="nav-item" href="https://norsegroup.co.uk/about-us/">About Us<button type="menu" class="fa">&#xf078;</button></a>
-                <a class="nav-item" href="https://norsegroup.co.uk/services/">Our Services<button type="menu" class="fa">&#xf078;</button></a>
-                <a class="nav-item" href="https://norsegroup.co.uk/partnerships/">Our Partnerships</a>
-                <a class="nav-item" href="https://www.careers.norsegroup.co.uk/">Careers</a>
-                <a class="nav-item" href="https://norsegroup.co.uk/news/">News</a>
-            </nav>
-        </div>
-    </header>
     
-    
-    <section id="medway-banner">
+    <header id="medway-banner">
         <div class="container">
             <h1 class="col" id="medway-header">Medway Norse<br>Pest Control</h1>
             <img class="col offset-10" id="medway-logo" src="images/Medway-Rev.png" alt="medway norse logo">
         </div>
-    </section>
+    </header>
     <span id="pest-nav">
         <nav id="medway-nav">
             <a class="col offset-1" id="nav-link" href="index.html">Home</a>
@@ -50,22 +30,96 @@
             <a id="nav-link" href="faq.html">FAQ</a>
         </nav>
     </span>
-    <div class="container main">
-        <h2>Frequently Asked Questions</h2>
+
+    <div class="faq">
+        <h2>Frequently Asked Questions</h2><br><br>
+        <details class="faq-item">
+            <summary class="faq-question">What types of pests do you treat? </summary>
+            <div class="faq-answer">	We offer services for a wide range of common household pests,
+                 including ants, cockroaches, rodents (mice and rats), bed bugs, wasps, fleas, silverfish, and more.
+                  If you have a specific pest problem not listed, please contact us – we can likely help!</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question"> How much does pest control cost?</summary>
+            <div class="faq-answer">The cost of our services depends on several factors,
+                 including the type of pest, the size of your property, the severity of the infestation,
+                  and the treatment method required. </div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">Are your treatments safe for my family and pets?</summary>
+            <div class="faq-answer">The safety of your family and pets is our top priority.
+                 We conduct a specific risk assessment on every visit.
+                  We use products and methods that are registered for use around homes and are applied by trained technicians.
+                   We will provide specific safety instructions related to the treatment plan for your home.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">How long does a pest control treatment last? </summary>
+            <div class="faq-answer">The longevity of a treatment depends on the pest, the environment, and the treatment method.
+                Some treatments, like those for bed bugs, may require multiple applications.
+                 Our technicians can discuss the expected duration of your specific treatment.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">Do I need to prepare my home before a pest control treatment?</summary>
+            <div class="faq-answer">Preparation depends on the type of treatment.
+                 We'll provide you with detailed instructions beforehand.
+                  It may involve covering or removing food, cleaning certain areas, or vacating the premises for a short period.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">Do you offer same day appointments? </summary>
+            <div class="faq-answer">We understand that pest problems need urgent attention.
+                 If available, we will offer same-day (additional charge may be applicable) or next-day service in most cases.
+                  Contact us as soon as you notice an issue, and we'll schedule an inspection as quickly as possible.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">Do I have to sign a contract for pest control service? </summary>
+            <div class="faq-answer">We offer both one-time treatments and ongoing pest control plans.
+                 While ongoing plans often require a contract, we also offer single-service options without long-term commitments.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">What is Integrated Pest Management (IPM)? </summary>
+            <div class="faq-answer">Integrated Pest Management (IPM) is a comprehensive approach to pest control that emphasises prevention,
+                 monitoring, and the use of the least toxic methods possible. It's a sustainable strategy that we use whenever applicable.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">How can I prevent pests from coming back?</summary>
+            <div class="faq-answer">Our technicians will provide you with recommendations tailored to your situation.
+                 Common prevention tips include sealing cracks and crevices, eliminating food and water sources, proper sanitation, and regular inspections.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">What are the signs of a bed bug infestation? </summary>
+            <div class="faq-answer">Bed bugs can be identified by itchy bites (often in a line),
+                 small blood stains on sheets, dark spots of excrement, and the presence of the bugs themselves
+                  (small, flat, reddish-brown insects). They are often found near areas where people sleep.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">How do I get rid of rodents? </summary>
+            <div class="faq-answer">Rodent control involves a combination of trapping, baiting, and exclusion.
+                 Our technicians can assess your situation and develop a tailored plan to eliminate existing rodents and prevent future infestations</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">Are your wasp removal services safe?</summary>
+            <div class="faq-answer">Yes, our technicians are trained in the safe removal of stinging insects.
+                 We use protective clothing and specialised techniques to minimise the risk of stings.</div>
+        </details>
+        <details class="faq-item">
+            <summary class="faq-question">Are you licensed and insured? </summary>
+            <div class="faq-answer">Yes, we are fully licensed and insured to provide pest control services.
+                 Our technicians are highly trained and certified.</div>
+        </details>
     </div>
-    <div class="container main">
-        <p>Find answers to your most common questions.<br><br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-    </div>
+
     <footer>
-        <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
-        <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
-        <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
-        <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        <div class="footer-center">
+            <img class="trustmark" src="images/BPCA-member-logo.jpg" alt="BPCA Member Logo">
+            <img class="trustmark" src="images/RSPH.png" alt="RSPH Logo">
+            <img class="trustmark" src="images/trustmark-logo.png" alt="Trustmark Logo">
+            <p class="copyright">&copy; 2024 Medway Norse Pest Control</p>
+        </div>
+        <a href="https://norsegroup.co.uk/">
+        <img id="norse-logo" src="images/Norse_Group_logo.png" alt="Norse Group Logo">
+        </a>
     </footer>
+
     <!--       cookies     --> 
     <div id="consentBox">
         <img src="images/Norse_Group_logo.png" alt="Norse Group Logo">
