imgs added to services

--- a/Mice.html
+++ b/Mice.html
@@ -60,9 +60,13 @@
               Contact Us Now!</a></u><br>
          <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
          <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
-         <p>
+         <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
+         <img src="images/mouse1.jpg" alt="Mouse1" class="mouse1">
+         <img src="images/mice1.jpg" alt="Mouse2" class="mouse2">
+         <img src="images/mice2.jpg" alt="Mouse3" class="mouse3">
+         <img src="images/Mice.jpg" alt="Mouse4" class="mouse4">
      </div>
      <footer>
         <div class="footer-center">
