--- a/Rats.html
+++ b/Rats.html
@@ -57,16 +57,19 @@
               Professionals have access to specialized tools and knowledge of rat behaviour
                to effectively eliminate infestations and prevent their return.
                 DIY methods often fail to address the root of the problem and can even worsen the situation.</p>
-        
     </div>
     <div class="services-contact-tile">
         <u> <a href="contact-us.html" class="services-contact-item" style="font-size: 1.5em; font-weight: 600;" >
               Contact Us Now!</a></u><br>
          <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
          <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
-         <p>
+         <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
+         <img src="images/rats.jpg" alt="rat1" class="rat1">
+         <img src="images/rats1.jpg" alt="rat2" class="rat2">
+         <img src="images/rats2.jpg" alt="rat3" class="rat3">
+         <img src="images/rat3.jpg" alt="rat4" class="rat4">
      </div>
      <footer>
         <div class="footer-center">
