--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             We believe in protecting our community, not just by eliminating pests but by doing so responsibly and with a focus on long-term solutions.
              When you choose Medway Norse Pest Control, you're choosing a team that cares about your well-being, your property, and the environment we all share.<br><br>
             </p>
-           <p></p> <b style="font-size: 1.1em;">Part of the Norse Group Family</b><br>
+           <p><b style="font-size: 1.1em;">Part of the Norse Group Family</b><br>
             Medway Norse Pest Control is a proud part of the Norse Group, one of the UK's largest and most respected facilities management companies. Norse Group provides a wide range of services to both the public and private sectors, including building maintenance, cleaning, catering, security, and, of course, pest control. Being part of this larger organisation gives us access to extensive resources, industry-leading training, and a network of expertise, allowing us to deliver the highest quality service to our customers in Medway.
             We believe in protecting our community, not just by eliminating pests but by doing so responsibly and with a focus on long-term solutions. When you choose Medway Norse Pest Control, you're choosing a team that cares about your well-being, your property, and the environment we all share.
             </p><br><br>
