--- a/contact-us.html
+++ b/contact-us.html
@@ -61,7 +61,7 @@
           <input type="text" id="postcode" name="post_code" placeholder="Postcode"
            pattern="^([A-Za-z][A-Ha-hJ-Yj-y]?[0-9][A-Za-z0-9]? ?[0-9][A-Za-z]{2}|[Gg][Ii][Rr] ?0[Aa]{2})$" required>
 
-          <p style="text-align: left;">Type of Property:</p>
+          <p style="text-align: left; color: black;">Type of Property:</p>
           <label class="radio-cont">Residential
             <input type="radio" checked="checked" name="property_type" value="Residential">
             <span class="radio"></span>
@@ -79,7 +79,7 @@
                 <option value="Bed bugs">
                 <option value="Flies">
                 <option value="Fleas">
-                <option value="Bird Conrol (pigeons)">
+                <option value="Bird Conrol (Pigeons)">
                 <option value="Beetles">
                 <option value="Ants">
                 <option value="Cockroaches">
