--- a/flies.html
+++ b/flies.html
@@ -60,9 +60,13 @@
               Contact Us Now!</a></u><br>
          <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
          <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
-         <p>
+         <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
+         <img src="images/fly1.jpg" alt="flies1" class="flies1">
+         <img src="images/fly4.jpg" alt="flies2" class="flies2">
+         <img src="images/fly2.jpg" alt="flies3" class="flies3">
+         <img src="images/fly.jpg" alt="flies4" class="flies4">
      </div>
      <footer>
         <div class="footer-center">
