--- a/index.html
+++ b/index.html
@@ -40,8 +40,17 @@
         
         <img src="images/stoney-lane.PNG" style="margin-bottom: 50px; margin-top: 20px;">
         
-        <p style="font-size: 1.1em;"><b>Why Choose Medway Norse Pest Control?<br><br>
-            Your Trusted Local Pest Control Experts<br><br><br></b></p>
+        <p style="font-size: 1.4em;"><b>Why Choose Medway Norse Pest Control?</p><br><br>
+
+            <div>
+                <img class="abt-us-img" src="images/BPCA-member-logo-rgb.jpg" alt="BPCA-member-logo">
+                <img class="rsph" src="images/RSPH-rgb.png" alt="RSPH-logo">
+                <img class="abt-us-img" src="images/trustmark-logo-rgb.png" alt="trustmark-logo">
+                <img class="abt-us-img" src="images/Medway_Council-rgb.png" alt="Medway-council">
+                <img class="abt-us-img" src="images/Norse_Group_logo.png" alt="Norse-Group">
+   </div>
+
+            <p style="font-size: 1.2em;"><u>Your Trusted Local Pest Control Experts<br><br><br></u></b></p>
 <p>            <b>o	Council Approved:</b> We are fully vetted and approved by the Medway Council, ensuring the highest standards of service and safety.<br><br>
             <b>o	Local Expertise:</b> Meet Your Medway Pest Control Experts: Medway Norse Pest Control is your home team advantage against unwanted pests.
              Our team of technicians aren't just qualified professionals with over 60 years of combined experience and Level 2 certifications:
@@ -59,12 +68,12 @@
             <!-- contact tile-->
             <div class="contact-tile">
                <u> <a href="contact-us.html" class="contact-item" style="font-size: 1.5em; font-weight: 600;" >
-                     Contact Us Now!</a></u><br>
-                <a href="mailto:pestcontrol@ncsgrp.co.uk" class="contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
-                <a href="tel:01634283215" class="contact-item">📞 01634 283215</a><br>
-                <p>
-                    contact us now.....lorum ipsum delit
-                </p>
+                     Contact Us Now!</a></u><br><br>
+                <a href="mailto:pestcontrol@ncsgrp.co.uk" class="contact-item">📧 PestControl@ncsgrp.co.uk</a><br><br>
+                <a href="tel:01634283215" class="contact-item">📞 01634 283215</a><br><br>
+                <p> <a href="contact-us.html" class="contact-item" style="font-size: 1.2em;">
+                    Get the help you need.<br>Contact us now
+                </a></p>
             </div>
             <!--map tile-->
             <div class="map-tile">
