--- a/bed-bugs.html
+++ b/bed-bugs.html
@@ -61,9 +61,13 @@
               Contact Us Now!</a></u><br>
          <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
          <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
-         <p>
+         <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
+         <img src="images/bedbug1.jpg" alt="bedbug1" class="bedbug1">
+         <img src="images/bedbug.jpg" alt="bedbug2" class="bedbug2">
+         <img src="images/bedbug2.jpg" alt="bedbug3" class="bedbug3">
+         <img src="images/bedbug3.jpg" alt="bedbug4" class="bedbug4">
      </div>
      <footer>
         <div class="footer-center">
