--- a/other.html
+++ b/other.html
@@ -96,7 +96,7 @@ Our yearly contracts begin with a thorough inspection of your property to identi
               Contact Us Now!</a></u><br>
          <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
          <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
-         <p>
+         <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
      </div>
