--- a/silverfish.html
+++ b/silverfish.html
@@ -60,7 +60,7 @@
               Contact Us Now!</a></u><br>
          <a href="mailto:pestcontrol@ncsgrp.co.uk" class="services-contact-item">📧 PestControl@ncsgrp.co.uk</a><br>
          <a href="tel:01634283215" class="services-contact-item">📞 01634 283215</a><br>
-         <p>
+         <p style="color: #ffffff;">
              Click Above to Book An Appointment Now!
          </p>
      </div>
